--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,5 @@
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F876A_LCD16x2.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/DC_MOTOR_PIC16F628A_PWM_C.X/dist/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/DC_MOTOR_PIC16F628A_PWM_C.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X/dist/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X/build/
