--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/COOLER_PIC16F88F_4_WIRES_PWM.X/dist/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/COOLER_PIC16F887_4_WIRES_LM35_LCD_INT.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/COOLER_PIC16F887_4_WIRES_LM35_LCD_INT.X/dist/
+/projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC2F675_ASM.X/build/
+/projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC2F675_ASM.X/dist/
+/projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC12F675_C.X/dist/
