--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,5 @@
 /projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC2F675_ASM.X/dist/
 /projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC12F675_C.X/dist/
 /projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC12F675_C.X/build/
+/projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC10F200_ASM.X/build/
+/projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC10F200_ASM.X/dist/
