--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/dist/
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/build/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_C.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X/dist/
