--- a/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X/nbproject/Makefile-genesis.properties
+++ b/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Jan 29 20:45:53 BRT 2024
+#Mon Jan 29 22:49:07 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/pic-as/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=7ef97fc3c630ab514e30fcd1d36bc424
+configurations-xml=5b4ca2580a5d1032a3505196bc030e03
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X
 host.platform=mac
