--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_16LEDs_C.X/build/
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LED_ASM.X/build/
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LED_ASM.X/dist/
+/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_8LEDs_C.X/build/
+/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_8LEDs_C.X/dist/
