--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LED_ASM.X/dist/
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_8LEDs_C.X/build/
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_8LEDs_C.X/dist/
+/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_8LEDs_ASM.X/build/
+/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_8LEDs_ASM.X/dist/
