--- a/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/nbproject/Makefile-genesis.properties
+++ b/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Feb 08 21:40:22 BRT 2024
-default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
-default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=aa9d1097190a66d1314d421a6f2603b4
-default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
+#Fri Feb 09 11:35:03 BRT 2024
+default.languagetoolchain.version=2.46
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
+default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=9ec152e4e6613316b62acb929bcaf32b
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/pic-as/bin
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/pic-as/bin
 host.id=0
-configurations-xml=3bbef67423c0fa858933a8e360fb50ca
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
+default.platformTool.md5=null
+configurations-xml=ecc6a5a21e0752c35ad65e8e69257715
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X
 host.platform=mac
