--- a/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/nbproject/Makefile-genesis.properties
+++ b/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Fri Feb 09 11:35:03 BRT 2024
+#Fri Feb 09 11:39:16 BRT 2024
 default.languagetoolchain.version=2.46
 default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=9ec152e4e6613316b62acb929bcaf32b
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/pic-as/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=ecc6a5a21e0752c35ad65e8e69257715
+configurations-xml=c9367a5f049d0b6a5a3e0d2399060d30
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X
 host.platform=mac
