--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@
 /projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/TMP_CHECK_PULSE.X/dist/
 /projects/12-ONE_WIRE_PROTOCOL/PIC16F887/MPLAB_EXAMPLES/PIC16F887_DS18B20.X/dist/
 /projects/12-ONE_WIRE_PROTOCOL/PIC16F887/MPLAB_EXAMPLES/PIC16F887_DS18B20.X/build/
+/projects/02-LED_CONTROL/PIC16F628A/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_1_C.X/dist/
+/projects/02-LED_CONTROL/PIC16F628A/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_1_C.X/build/
