--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,6 @@
 /projects/12-ONE_WIRE_PROTOCOL/PIC16F887/MPLAB_EXAMPLES/PIC16F887_DS18B20.X/build/
 /projects/02-LED_CONTROL/PIC16F628A/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_1_C.X/dist/
 /projects/02-LED_CONTROL/PIC16F628A/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_1_C.X/build/
+/projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/Blink_PIC12F675_C.X/dist/
+/projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_C.X/dist/
+/projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_C.X/build/
