--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,5 @@
 /projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X/build/
 /projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/PIC16F887_04_4_COLLER_RPM.X/build/
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/build/
+/projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_CHECK_PULSE.X/build/
+/projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_CHECK_PULSE.X/dist/
