--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,5 @@
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/PIC10F200_DS18B20_74HC595_8LED_ASM.X/dist/
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_PIC10F200_DS18B20_74HC595_8LED_ASM.X/build/
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_PIC10F200_DS18B20_74HC595_8LED_ASM.X/dist/
+/projects/01-Blink/PIC10F200/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/dist/
+/projects/01-Blink/PIC10F200/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/build/
