--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,5 @@
 /projects/13-SINGLE_WIRE_WITH_DHT11/PIC10F200/MPLAB_EXAMPLE/PIC10F200_DHT11_74HC595_8LEDs.X/dist/
 /projects/13-SINGLE_WIRE_WITH_DHT11/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_DHT11_LCD16x2.X/build/
 /projects/13-SINGLE_WIRE_WITH_DHT11/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_DHT11_LCD16x2.X/dist/
+/projects/14-GAS_SENSOR/PIC10F222/MPLAB_EXAMPLE/PIC10F222_MQ_2.X/build/
+/projects/14-GAS_SENSOR/PIC10F222/MPLAB_EXAMPLE/PIC10F222_MQ_2.X/dist/
